[gd_scene load_steps=5 format=3 uid="uid://c4axjhbd674h8"]

[ext_resource type="Script" uid="uid://bgequl5pvuuq5" path="res://menu/settings/actions_configuration.gd" id="1_h33al"]
[ext_resource type="Texture2D" uid="uid://qd30cvl2xrw7" path="res://menu/theme/icons/add.png" id="2_h33al"]
[ext_resource type="Texture2D" uid="uid://brcaom8n83yf2" path="res://menu/settings/icons/reset.png" id="3_cxjse"]
[ext_resource type="Texture2D" uid="uid://bs0jb0hstf3sl" path="res://menu/theme/icons/save.png" id="4_4wuv6"]

[node name="ActionsConfiguration" type="Window"]
title = "Настройка действий"
position = Vector2i(0, 28)
size = Vector2i(720, 640)
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_h33al")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Actions" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MoveLeft" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveLeft"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveLeft/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Двигаться влево"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveLeft/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveLeft/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="MoveRight" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveRight"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveRight/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Двигаться вправо"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveRight/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveRight/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="MoveUp" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveUp"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveUp/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Двигаться вверх"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveUp/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveUp/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="MoveDown" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveDown"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveDown/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Двигаться вниз"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveDown/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveDown/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="Sneak" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Sneak"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Sneak/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Красться"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Sneak/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Sneak/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="Shoot" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Shoot"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Shoot/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Стрелять"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Shoot/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Shoot/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="ShowAim" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/ShowAim"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/ShowAim/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Показать прицел"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/ShowAim/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/ShowAim/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="Reload" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Reload"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Reload/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Перезарядиться"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Reload/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Reload/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="AdditionalButton" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/AdditionalButton"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/AdditionalButton/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Дополнительная кнопка оружия"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/AdditionalButton/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/AdditionalButton/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="WeaponLight" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponLight"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponLight/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Лёгкое оружие"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponLight/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponLight/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="WeaponHeavy" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponHeavy"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponHeavy/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Тяжёлое оружие"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponHeavy/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponHeavy/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="WeaponSupport" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponSupport"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponSupport/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Оружие поддержки"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponSupport/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponSupport/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="WeaponMelee" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponMelee"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponMelee/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Ближнее оружие"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponMelee/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponMelee/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="WeaponAdditional" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponAdditional"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponAdditional/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Дополнительное оружие"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponAdditional/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponAdditional/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="NextWeapon" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/NextWeapon"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/NextWeapon/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Следующее оружие"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/NextWeapon/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/NextWeapon/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="PreviousWeapon" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/PreviousWeapon"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/PreviousWeapon/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Предыдущее оружие"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/PreviousWeapon/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/PreviousWeapon/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="ShowWeapons" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/ShowWeapons"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/ShowWeapons/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Показать оружия"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/ShowWeapons/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/ShowWeapons/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="UseSkill" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/UseSkill"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/UseSkill/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Использовать навык"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/UseSkill/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/UseSkill/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="Chat" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Chat"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Chat/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Открыть чат"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Chat/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Chat/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="CloseChat" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/CloseChat"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/CloseChat/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Закрыть чат"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/CloseChat/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/CloseChat/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="Fullscreen" type="PanelContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Fullscreen"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Fullscreen/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"HeaderSmall"
text = "Переключить полный экран"

[node name="Events" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Fullscreen/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="VBoxContainer/ScrollContainer/MarginContainer/Actions/Fullscreen/Container"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_h33al")

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Discard" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
disabled = true
text = "Сбросить"
icon = ExtResource("3_cxjse")

[node name="Save" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
disabled = true
text = "Сохранить"
icon = ExtResource("4_4wuv6")

[node name="EventSelector" type="ConfirmationDialog" parent="."]
position = Vector2i(0, 28)
size = Vector2i(600, 120)
unresizable = true
ok_button_text = "Выбрать"
dialog_text = "Ожидаю ввод..."
dialog_close_on_escape = false
cancel_button_text = "Отмена"

[connection signal="close_requested" from="." to="." method="hide"]
[connection signal="close_requested" from="." to="." method="_on_discard_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveLeft/Container/Add" to="." method="add_action_event" binds= [&"move_left"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveRight/Container/Add" to="." method="add_action_event" binds= [&"move_right"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveUp/Container/Add" to="." method="add_action_event" binds= [&"move_up"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/MoveDown/Container/Add" to="." method="add_action_event" binds= [&"move_down"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/Sneak/Container/Add" to="." method="add_action_event" binds= [&"sneak"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/Shoot/Container/Add" to="." method="add_action_event" binds= [&"shoot"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/ShowAim/Container/Add" to="." method="add_action_event" binds= [&"show_aim"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/Reload/Container/Add" to="." method="add_action_event" binds= [&"reload"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/AdditionalButton/Container/Add" to="." method="add_action_event" binds= [&"additional_button"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponLight/Container/Add" to="." method="add_action_event" binds= [&"weapon_light"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponHeavy/Container/Add" to="." method="add_action_event" binds= [&"weapon_heavy"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponSupport/Container/Add" to="." method="add_action_event" binds= [&"weapon_support"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponMelee/Container/Add" to="." method="add_action_event" binds= [&"weapon_melee"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/WeaponAdditional/Container/Add" to="." method="add_action_event" binds= [&"weapon_additional"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/NextWeapon/Container/Add" to="." method="add_action_event" binds= [&"next_weapon"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/PreviousWeapon/Container/Add" to="." method="add_action_event" binds= [&"previous_weapon"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/ShowWeapons/Container/Add" to="." method="add_action_event" binds= [&"show_weapons"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/UseSkill/Container/Add" to="." method="add_action_event" binds= [&"use_skill"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/Chat/Container/Add" to="." method="add_action_event" binds= [&"chat"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/CloseChat/Container/Add" to="." method="add_action_event" binds= [&"close_chat"]]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/MarginContainer/Actions/Fullscreen/Container/Add" to="." method="add_action_event" binds= [&"fullscreen"]]
[connection signal="pressed" from="VBoxContainer/Buttons/Discard" to="." method="_on_discard_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Save" to="." method="_on_save_pressed"]
[connection signal="canceled" from="EventSelector" to="." method="_on_event_selector_canceled"]
[connection signal="confirmed" from="EventSelector" to="." method="_on_event_selector_confirmed"]
[connection signal="window_input" from="EventSelector" to="." method="_on_event_selector_window_input"]
